--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Core
-torch>=2.1.0
-transformers>=4.34.0
-openai-whisper>=20231117
+torch
+transformers
+openai-whisper
 
 # YouTube downloading
-yt-dlp>=2023.21.2
+yt-dlp
 
 # Audio conversion
-ffmpeg-python>=0.3.0
+ffmpeg-python
 
 # Optional: GPT4All (if you use offline GGML models)
-gpt4all==1.3.0
+gpt4all
 
 # Utilities
-numpy>=1.25.0
+numpy
