--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-# Core
-torch>=2.1.0
-transformers>=4.34.0
-whisper @ git+https://github.com/openai/whisper.git
-
-# YouTube downloading
-yt-dlp>=2023.21.2
-
-# Audio conversion
-ffmpeg-python>=0.3.0
-
-# Optional: GPT4All (if you use offline GGML models)
-gpt4all==1.3.0
-
-# Utilities
-numpy>=1.25.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+yt-dlp
+ffmpeg-python
+openai-whisper
+transformers
+numpy
+gpt4all
