--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-torch
 yt-dlp
 ffmpeg-python
-openai-whisper
-transformers
+openai-whisper>=20231117
+transformers==4.41.2
 numpy
 gpt4all
 openai
-
